<resources>
    <string name="app_name">职知-少数民族产业专向服务</string>
    <string name="once_more_for_exit">再点一次退出职知</string>
    <string name="splash_image">splash界面过渡背景</string>
    <string name="skip">跳过</string>
    <string name="home">主页</string>
    <string name="find">发现</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="nothing">空</string>
    <string name="home_background">主页背景</string>
    <string name="me_background">用户背景</string>
    <string name="default_icon">http://bmob-cdn-17846.b0.upaiyun.com/2018/04/05/ddb35da740366d9e8065c119e37829d3.png</string>
    <string name="load_icon_failed">加载头像失败</string>
    <string name="login">登录</string>
    <string name="exit_login">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="retrieve">忘记密码？</string>
    <string name="quick_register">快速注册</string>
    <string name="reset">重置密码</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="name">用户名</string>
    <string name="name_too_short">用户名太短</string>
    <string name="password_too_short">密码太短</string>
    <string name="password_again">请再次输入密码</string>
    <string name="password_not_matching">两次密码不匹配</string>
    <string name="email">邮箱（用于找回密码）</string>
    <string name="email_wrong_format">邮箱格式不正确</string>
    <string name="register_success">注册请求成功，请到邮箱确认注册</string>
    <string name="forget_email">请输入注册的邮箱</string>
    <string name="reset_success">重置密码请求成功，请到邮箱重置密码</string>
    <string name="search_hint">搜你所想</string>
    <string name="enter">进入主界面</string>
    <string name="edit_information">编辑资料</string>
    <string name="user_information">个人信息</string>
    <string name="scan_button">扫描按钮</string>
    <string name="default_city">昆明市</string>
    <string name="head_icon">头像</string>
    <string name="phone_number">手机号码</string>
    <string name="create_time">创建时间</string>
    <string name="email_text">邮箱</string>
    <string name="user_information_image">用户头像</string>
    <string name="user_age">年龄</string>
    <string name="user_address">地址</string>
    <string name="system_notification">通知与消息</string>
    <string name="system_notification_icon">系统通知图标</string>
    <string name="instructions_icon">指示图标</string>
    <string name="cant_scan_without_permission">没有权限无法扫描呦</string>
    <string name="header_icon">header图标</string>
    <string name="header_success_icon">header成功图标</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">释放后刷新</string>
    <string name="swipe_to_refresh">继续滑动刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="load_more">加载更多</string>
    <string name="footer_success_icon">footer成功图标</string>
    <string name="release_to_load_more">释放后加载更多</string>
    <string name="swipe_to_load_more">继续滑动加载更多</string>
    <string name="loading_more">加载中…</string>
    <string name="search">搜索</string>
    <string name="top">置顶</string>
    <string name="delete">删除</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="send">发送</string>
    <string name="blur_background">毛玻璃背景</string>
    <string name="center_icon_background">中心大图标背景</string>
    <string name="center_icon">中心大图标</string>
    <string name="cancel_button_image">取消按钮图片</string>
    <string name="recommended_work"><![CDATA[推荐工作 >]]></string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="copy_link">复制链接</string>
    <string name="loading">载入中…</string>
    <string name="copy_success">已复制链接到剪切板</string>
    <string name="url">url</string>
    <string name="unknown_uri">未知路径</string>
    <string name="msg">msg</string>
    <string name="menu_button">菜单按钮</string>
    <string name="find_recycler_item_content_image">发现动态图片</string>
    <string name="collection_icon">收藏图标</string>
    <string name="default_like_and_comment_num">0</string>
    <string name="advertisement">广告</string>
    <string name="new_find"><![CDATA[新发现 >]]></string>
    <string name="at_me">我的消息</string>
    <string name="interested_in_me">对我感兴趣的</string>
    <string name="enterprise_message">企业消息</string>
    <string name="recommended_course"><![CDATA[推荐课程 >]]></string>
</resources>
