<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"  >

        <TextView
            android:id="@+id/fragment_home_city_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/text_padding"
            android:text="@string/default_city"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/fragment_home_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/home_edit_background"
            android:padding="@dimen/edit_padding"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:textSize="@dimen/edit_text_size"
            android:drawableStart="@drawable/ic_search"
            tools:ignore="TextFields" />

        <ImageView
            android:id="@+id/fragment_home_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_margin"
            android:src="@drawable/ic_scan"
            android:contentDescription="@string/scan_button" />

    </LinearLayout>

    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
        android:id="@+id/fragment_home_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:swipe_style="classic">

        <include
            android:id="@id/swipe_refresh_header"
            layout="@layout/swipe_header" />

        <LinearLayout
            android:id="@id/swipe_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <cn.bingoogolapple.bgabanner.BGABanner
                android:id="@+id/fragment_home_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/banner_margin"
                app:banner_aspectRatio="2.4"
                app:banner_pageChangeDuration="2000"
                app:banner_placeholderDrawable="@drawable/a1"
                app:banner_pointAutoPlayAble="true"
                app:banner_pointContainerBackground="@android:color/transparent"
                app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
                app:banner_indicatorGravity="bottom|right"
                app:banner_isNeedShowIndicatorOnOnlyOnePage="true"
                app:banner_transitionEffect="alpha"/>

            <LinearLayout
                android:id="@+id/fragment_home_router_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_width"
                android:layout_margin="@dimen/divider_margin"
                android:background="@color/colorText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/recommended_work"/>

            <LinearLayout
                android:id="@+id/fragment_home_recommended_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_width"
                android:layout_margin="@dimen/divider_margin"
                android:background="@color/colorText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:text="@string/recommended_course"/>

        </LinearLayout>

        <include
            android:id="@id/swipe_load_more_footer"
            layout="@layout/swipe_footer" />

    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>

</LinearLayout>
