<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/fragment_me_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/text_padding"
            app:expandedTitleMarginStart="@dimen/text_padding"
            app:collapsedTitleTextAppearance="@style/CollapsedStyle"
            app:expandedTitleTextAppearance="@style/ExpandedStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/fragment_me_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/a1"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                android:contentDescription="@string/me_background"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/fragment_me_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/text_padding"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher"
                app:riv_oval="true"/>

            <TextView
                android:id="@+id/fragment_me_edit_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/text_padding"
                android:background="@drawable/text_button_background"
                android:text="@string/edit_information"
                android:textColor="@android:color/white"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/fragment_me_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/fragment_me_start_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/fragment_me_exit_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_login"
                android:textColor="@color/colorAccent"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>